# fenjue

./: .env.example  .gitignore  20260507.json  20260507_main.json  20260508.json  20260508_main.json  Makefile  README.md  __init__.py  _check_0602.py  _check_crash.py  _check_intraday.py  _check_redgreen.py  _check_timing.py  _check_timing2.py  _check_timing3.py  _check_timing4.py  _sim_0508_0940.py  _tmp_pattern.py  backtest_600378.py  backtest_all.py  backtest_cross_0602.py  backtest_hh_vs_sh.py  backtest_no_future.py  backtest_v2.py  build_pool.py  check_dates.py  early_signals.py  early_signals_v2.py  fenjue_core.py  fenjue_fast.py  fenjue_lab.py  fenjue_live.py  fenjue_sim.py  fenjue_snapshot.py  fenjue_tomorrow.py  pool_20260507.json  pool_20260508.json  pool_20260511.json  pool_20260512.json  (+19 more)
releases/a-stock-signal-lab-1.0.0-35ddac7/: .gitignore  README.md  SKILL.md  pyproject.toml
releases/a-stock-signal-lab-1.0.0-35ddac7/docs/superpowers/specs/: 01_position_ledger_design.md  02_event_time_availability_design.md  03_intraday_outcome_and_execution_model.md  (+3 more)
releases/a-stock-signal-lab-1.0.0-35ddac7/fenjue/: __init__.py  daily.py  events.py  ledger.py  runtime.py  service.py  thesis.py  timing.py  v2db.py
releases/a-stock-signal-lab-1.0.0-35ddac7/references/: backtest-methodology.md  deep-v-strategy.md  strategy-b-backtest.md  strategy.md
releases/a-stock-signal-lab-1.0.0-35ddac7/scripts/: screen_pool.py  screen_pool2.py
releases/a-stock-signal-lab-1.0.0-35ddac7/tests/: test_decision.py  test_events.py  test_execution.py  test_ledger.py  test_shadow.py
(+221 files in other folders)
