[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a-stock-signal-lab"
version = "1.0.0"
description = "Auditable A-share research and position decision toolkit for Hermes"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fenjue = "fenjue.cli:main"

[tool.setuptools]
packages = ["fenjue"]

[tool.setuptools.package-data]
fenjue = ["sql/*.sql"]
